--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-console.log("nvnvn")
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>My first git hub</title>
+</head>
+<body>
+    <div>
+        <h3>My first Wwebsite</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel consequatur ipsum voluptatibus earum accusantium velit recusandae soluta quidem autem, amet quos quisquam necessitatibus modi, dolore nobis quo voluptatum suscipit quae similique corporis esse fugiat iusto? Ut officiis deleniti voluptatum.</p>
+    </div>
+</body>
+</html>
